Partially tested service registration.